src/styles/note-editor.scss
@import '~quill/dist/quill.snow.css';

.note-editor,
.note-editor-container {
    height: 100%;
}

.editor-container {
    overflow: auto;
    border: none;
    font-size: 1rem;
    flex-grow: 1;
    background-color: $gray-200;

    .gm-scroll-view,
    &.gm-prevented {
        display: flex;
        flex-direction: row;
    }
}

.editor {
    display: flex;
    flex-direction: column;

    pre {
        padding: 0.7rem 1rem;
        border-radius: 5px;
        background: $black;
        color: $white;
        font-size: 0.8rem;
        overflow-x: auto;
  
        code {
            display: block;
        }
    }

    img {
        max-width: 100%;
    }
}

.ProseMirror,
.editor-note-title {
    width: 100%;
    max-width: 794px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
        0 3px 6px rgba(0, 0, 0, 0.23);
    padding: 0.74rem 1rem;
    background-color: $white;
}

.ProseMirror {
    min-height: 100%;
    height: auto;
    margin-top: 0;
    margin-bottom: 6rem;

    &:focus {
        outline: none;
    }

    p {
        margin-bottom: 0.5rem;
    }
}

.editor-note-title {
    input {
        display: block;
        width: 100%;
        border: none;
        font-size: 1.5rem;
        font-weight: 700;
        color: $input-color;

        &:focus {
            outline: none;
        }
        &::placeholder {
            color: lighten($input-color, 40%);
        }
    }
}

.note-content-editor {
    height: 100%;
    width: 100%;
    border: none;
    outline: none;
    padding: 0;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    resize: none;
}

$hover-background: darken($primary, 25%);
.menubar {
    border: none;
    border-bottom: 1px solid #eee;
    padding: 0 36px;
    flex-basis: auto;
    flex-wrap: wrap;

    &__button {
        padding: 0.375rem .5rem;
        display: inline-block;
        background: transparent;
        border: 0;
        color: #000;
        margin-right: 0.25rem;
        border-radius: 5px;

        &:last-of-type {
            margin-right: 0;
        }

        &.active {
            color: $hover-background;

            .icon {
                &.fill {
                    fill: $hover-background !important;
                }

                &.stroke {
                    stroke: $hover-background !important;
                }
            }
        }

        &:hover {
            background-color: $light;
        }
    }
}

.user-cursor {
    > div {
        position: absolute;
        top: -2em;
        font-size: 0.75rem;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
        -webkit-user-select: none;
        user-select: none;
        color: #fff;
        padding: 4px;
        border-radius: 2px;
        width: auto;
        white-space: nowrap;
        opacity: 0;
        transition: opacity 0.3s;
    }
    &.hover > div {
        opacity: 1;
    }
}

[data-decor-strong] {
    font-weight: 700;
}
[data-decor-em] {
    font-style: italic;
}
[data-decor-heading] {
    font-size: 130%;
    font-weight: 700;
}
[data-decor-codespan] {
    background-color: $light;
    font-family: monospace;
    padding: 5px;
}
[data-decor-code] {
    font-family: monospace;
}
[data-decor-del] {
    text-decoration: line-through;
}
[data-decor-list] {
    margin-left: 0.5rem;
}
.editor-top-shadow {
    z-index: 1;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.73);
    height: 1px;
    margin-top: -1px;
    opacity: 0;
}
.img-resizer {
    box-sizing: border-box;
    z-index: 1;
    box-shadow: 0 0 1px 1px $black;
}
.img-resize-preview {
    background-color: $white;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.2;
    pointer-events: none;
    position: absolute;
    z-index: 1;
}
.editor-wrapper {
    flex: 1;
}

